--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ Flask-Login==0.2.11
 Flask-SQLAlchemy==2.0
 Flask-Script==2.0.5
 Flask-WTF==0.11
-Flask-Security==0.2.11
+Flask-Security
 
 # Other
 itsdangerous==0.24
