--- a/tripblaaz/env.example
+++ b/tripblaaz/env.example
@@ -5,7 +5,7 @@ POSTGRES_USER=postgresuser
 # General settings
 DJANGO_ADMIN_URL=
 DJANGO_SETTINGS_MODULE=config.settings.production
-DJANGO_SECRET_KEY=j2985a0)yg&^v=k2y)n9khx5ly)ybfc_a8-6lw*_34ed&ey85w
+DJANGO_SECRET_KEY=#h525uhb!!mxbb#i00fe^z%f*)pn-m&j#017h6pzifz4%y+ji6
 DJANGO_ALLOWED_HOSTS=.tripblaaz.com
 
 # AWS Settings
